# folderify

./: .gitignore  Cargo.toml  Makefile  README.md  README.md.auto.html  Set Icon From Mask.scpt  biome.json  bunfig.toml  f  folderify  folderify.py  package.json  rust-toolchain.toml  setup.py  test.icns  tsconfig.json
.config/: readme-cli-help.json
.github/workflows/: CI.yml  check-assigned-icon.sh  check-generated-files.sh  github-release.yml  publish-github-release.yaml  test.yml
examples/apple/: apple_folder.icns
examples/octocat/: octocat.webloc  octocat_folder.icns
examples/src/: .gitignore
folderify/: __main__.py
html/: jquery-1.6.min.js  multi.html  simple.html
lib/: lgicns2rsrc.py  makeicns  makeicns.webloc  osxiconutils.webloc  seticon
old/: .gitignore  MANIFEST.in  README.md  setup.py
old/examples/src/: .gitignore
old/folderify/: __main__.py
src/: args.rs  command.rs  convert.rs  error.rs  generic_folder_icon.rs  icon_conversion.rs  main.rs  options.rs  output_paths.rs  primitives.rs  resources.rs
test/: helpers.sh  test-behaviour.sh  test-behaviour.test.ts  test.sh
tools/Quicksilver/: Use as icon mask (folderify)….scpt
