[package]
name = "folderify"
version = "3.0.7"
edition = "2021"
description = "Generate a native-style macOS folder icon from a mask file."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.2.0"
include_dir = "0.7.3"
mktemp = "0.5.0"

[[bin]]
name = "folderify"
